--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -36,16 +36,34 @@ urlcolor=OliveGreen
 {MyVerbatim}{Verbatim}
 {formatcom=\color{Violet}}
 
-\newenvironment{nouppercase}{%
-\let\uppercase\relax%
-\renewcommand{\uppercasenonmath}[1]{}}{}
+\usepackage{fancyhdr}
+
+
+\pagestyle{fancy}
+\fancyhead[RO, LE]{\thepage}
+\fancyhead[C]{The \emph{FrobeniusThresholds} package for \emph{Macaulay2}}
+\fancyfoot{}
+\renewcommand{\headrulewidth}{0pt}
+
+
+\makeatletter
+\def\@settitle{\begin{center}%
+  \baselineskip14\p@\relax
+    \bfseries
+    \normalfont\LARGE%<- NEW
+\@title
+  \end{center}%
+}
+\makeatother
 
 \newcommand{\ft}{\operatorname{c}}
 \newcommand{\idealm}{\mathfrak{m}}
 
 
+
+
 \begin{document}
-\title{The \emph{FrobeniusThresholds} package for \emph{Macaulay2}}
+\title[]{The \emph{FrobeniusThresholds} package for \emph{Macaulay2}}
 
 \author[]{Daniel J.\ Hern\'andez}
 \address{Department of Mathematics, University of Kansas, Lawrence, KS~66045, USA}
@@ -84,9 +102,7 @@ urlcolor=OliveGreen
 
 \keywords{Macaulay2, Frobenius, $F$-singularity, $F$-pure threshold, $F$-threshold}
 
-\begin{nouppercase}
 \maketitle
-\end{nouppercase}
 
 % \begin{center}
 % {\large \textbf{The \emph{FrobeniusThresholds} package for \emph{Macaulay2}}}
