--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -170,14 +170,14 @@ Like $F$-pure thresholds, $F$-thresholds can also be defined in terms of its tes
 
 There are three main sections in this paper, which describe and illustrate the main functionality implemented in the package \emph{FrobeniusThresholds}.
 \begin{itemize}
-\item[$\circ$] \autoref{sec.Nu} describes the methods for approximating the $F$-pure threshold and other $F$-thresholds.  
+\item[$\circ$] \autoref{sec.Nu} describes the fundamental function {\tt nu}.  As its name suggests, this function is concerned with computing the integers $\nu_I^J(p^e)$ described above.  
 \item[$\circ$] \autoref{sec.IsFPT} explains the functionality for determining whether a given number is the $F$-pure threshold, or more generally, an \emph{$F$-jumping exponent}.
 \item[$\circ$] \autoref{sec.FPT} describes the features of the central function of the package, {\tt fpt}. 
 \end{itemize}
 This package builds heavily upon the \emph{TestIdeals} package for \emph{Macaulay2}, which provides a broad range of functionality in prime characteristic commutative algebra. 
 
 \subsection*{Acknowledgements.}  First and foremost, the authors enthusiastically thank all authors and contributors to the \emph{FrobeniusThresholds} package.
-Our package coauthors are Dan Smolkin (LIST MORE NAMES), and Zhibek Kadyrsizova, Moty Katzman (LIST MORE NAMES) contributed valuable code to the package. 
+Our package coauthors are Dan Smolkin {\color{red}(LIST MORE NAMES)}, and Zhibek Kadyrsizova, Moty Katzman {\color{red} (LIST MORE NAMES)} contributed valuable code to the package. 
 %Erin Bela, Juliette Bruce, Sara Malec, Maral Mostafazadehfard, Marcus Robinson, Matthew Mastroeni
 
 Thanks go to the organizers of the \emph{Macaulay2} workshops where much of the functionality described herein was developed, hosted by Wake Forest University in 2012, the University of California, Berkeley in 2014 and 2017, Boise State University in 2015, and the University of Utah in 2016. 
@@ -394,6 +394,9 @@ This option can be set to {\tt FrobeniusPower}, {\tt FrobeniusRoot}, or {\tt Sta
 
 First, if {\tt ContainmentTest} is set to {\tt StandardPower}, then the ideal containments checked when computing {\tt nu(e,I,J)} are verified directly.
 That is, a standard power of $I$ is first computed, say $I^n$, and a check is then run to see if the resulting ideal lies in the $p^e$-th Frobenius power of $J$.
+
+%{\color{red} \[ I \subseteq J^{[p^e]} \iff I \subseteq I^{[1/p^e]} \subseteq J.\]}
+
 Alternately, if {\tt ContainmentTest} is set to {\tt FrobeniusRoot}, then the ideal containments are verified through the computation of Frobenius roots.  That is, the $p^e$-th Frobenius root of $I^n$ is first computed, and a check is then run to see if it lies in $J$.  The output is unaffected, but this option often speeds up computations, especially when a polynomial or principal ideal is passed as the second argument.
 
 %R = ZZ/11[x,y,z];
