--- a/Fsing/FThresholdsPaper/FThresholds.tex
+++ b/Fsing/FThresholdsPaper/FThresholds.tex
@@ -173,7 +173,8 @@ There are three main sections in this paper, which describe and illustrate the m
 \item[$\circ$] \autoref{sec.IsFPT} explains the functionality for determining whether a given number is the $F$-pure threshold, or more generally, an \emph{$F$-jumping exponent}.
 \item[$\circ$] \autoref{sec.FPT} describes the features of the central function of the package, {\tt fpt}.
 \end{itemize}
-This package builds heavily upon the \emph{TestIdeals} package for \emph{Macaulay2}, which provides a broad range of functionality in prime characteristic commutative algebra.
+
+This package builds heavily upon the \emph{TestIdeals} package for \emph{Macaulay2} \cite{TestIdealsPackage, TestIdealsPaper}, which provides a broad range of functionality for effective computation in prime characteristic commutative algebra.
 
 \subsection*{Acknowledgements.}  First and foremost, the authors enthusiastically thank all authors and contributors to the \emph{FrobeniusThresholds} package.
 Our package coauthors are Dan Smolkin {\color{red}(LIST MORE NAMES)}, and Zhibek Kadyrsizova, Moty Katzman {\color{red} (LIST MORE NAMES)} contributed valuable code to the package.
@@ -1007,7 +1008,11 @@ o36 : List
 }
 \medspace
 
+
+\newpage
 \section{Future work}
+
+We conclude this note with some comments on possible future improvements to the package.  
 
 \begin{enumerate}
 \item Add more cases to {\tt UseSpecialAlgorithms}.  
