--- a/Fsing/FThresholdsPaper/MainBib.bib
+++ b/Fsing/FThresholdsPaper/MainBib.bib
@@ -18,14 +18,37 @@
   Url                      = {https://arxiv.org/abs/1802.02705}
 }
 
+ @misc{MultiplierIdealsPackage,
+       title = {{MultiplierIdeals: A \emph{Macaulay2} package. Version~1.1}},
+       author = {Zach Teitler and Bart Snapp and Claudiu Raicu},
+       howpublished = {A \emph{Macaulay2} package available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages}}
+     }
 
-@Misc{TestIdealsPackage,
-  Title                    = {{TestIdeals}, a package for calculations of singularities in positive characteristic},
+     @article{MultiplierIdealsArticle,
+       title = {{Software for multiplier ideals}},
+       author = {Zach Teitler and Bart Snapp and Claudiu Raicu},
+       journal = {The Journal of Software for Algebra and Geometry},
+       volume = {7},
+       year = {2015},
+     }
 
-  Author                   = {Bela, E. AND Boix, A. F. AND Bruce, J. AND Ellingson, D. AND Hern\'andez, D. J. AND Kadyrsizova, Z. AND Katzman, M. AND Malec, S. AND Mastroeni, M. AND Mostafazadeh\-fard, M. AND Robinson, M. AND Schwede, K. AND Smolkin, D. AND Teixeira, P. AND Witt, E. E.},
-  HowPublished             = {available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages/TestIdeals}},
-  Url                      = {https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages/TestIdeals}
-}
+ @misc{TestIdealsPaper,
+       title = {{TestIdeals: A package for calculations of singularities in positive characteristic. Version~1.01}},
+       author = {Erin Bela and Alberto F. Boix and Juliette Bruce and Drew Ellingson and Daniel Hernandez and Zhibek Kadyrsizova and Mordechai Katzman and Sara Malec and Matthew Mastroeni and Maral Mostafazadehfard and Marcus Robinson and Karl Schwede and Dan Smolkin and Pedro Teixeira and Emily Witt},
+       howpublished = {A \emph{Macaulay2} package available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages}}
+     }
+
+@misc{FThresholdsPackage,
+       title = {{FThresholds: A package for calculations of F-thresholds. Version~2.0}},
+       author = {Daniel Hernandez and Karl Schwede and Dan Smolkin and Pedro Teixeira and Emily Witt},
+       howpublished = {A \emph{Macaulay2} package available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages}}
+     }
+
+@misc{DmodulesSource,
+        title = {{Dmodules: functions for computations with D-modules. Version~1.4.0.1}},
+        author = {Anton Leykin and Harrison Tsai},
+        howpublished = {A \emph{Macaulay2} package available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages}}
+      }
 
 
 @ARTICLE{TestIdealsPaper,
@@ -7634,4 +7657,21 @@ MRREVIEWER = {Alexander B. Levin},
 MRREVIEWER = {Manuel Blickle},
        DOI = {10.4310/MRL.2008.v15.n3.a15},
        URL = {http://dx.doi.org/10.4310/MRL.2008.v15.n3.a15},
+}
+
+@article {ZhuLogCanoincalThresholdsInPositiveChar,
+    AUTHOR = {Zhu, Zhixian},
+     TITLE = {Log canonical thresholds in positive characteristic},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {287},
+      YEAR = {2017},
+    NUMBER = {3-4},
+     PAGES = {1235--1253},
+      ISSN = {0025-5874},
+   MRCLASS = {14E18 (14B05 14E15 14G17)},
+  MRNUMBER = {3719534},
+MRREVIEWER = {Ching-Jui Lai},
+       DOI = {10.1007/s00209-017-1866-3},
+       URL = {https://doi.org/10.1007/s00209-017-1866-3},
 }
