Small changes to the paper.

--- a/Fsing/FThresholdsPaper/MainBib.bib
+++ b/Fsing/FThresholdsPaper/MainBib.bib
@@ -32,7 +32,7 @@
        year = {2015},
      }
 
- @misc{TestIdealsPaper,
+ @misc{TestIdealsPackage,
        title = {{TestIdeals: A package for calculations of singularities in positive characteristic. Version~1.01}},
        author = {Erin Bela and Alberto F. Boix and Juliette Bruce and Drew Ellingson and Daniel Hernandez and Zhibek Kadyrsizova and Mordechai Katzman and Sara Malec and Matthew Mastroeni and Maral Mostafazadehfard and Marcus Robinson and Karl Schwede and Dan Smolkin and Pedro Teixeira and Emily Witt},
        howpublished = {A \emph{Macaulay2} package available at \url{https://github.com/Macaulay2/M2/tree/master/M2/Macaulay2/packages}}
